# Haskell-rules

./: .TypeGT.hs.swp  .gitignore  CHANGELOG.md  Haskell-Rules.cabal  Haskell_Rules.cabal  Main.hs  NDSM.hs  README  TypeChg.hs  TypeChgMin.hs  TypeChgPlus.hs  TypeChgTrad.hs  TypeFV.hs  TypeFVSet.hs  TypeGT.hs  TypeGU.hs  TypeLam.hs
lib/: NDSM.hs
src/: Main.hs
src/Examples/: TypeChg.hs  TypeChgMin.hs  TypeChgPlus.hs  TypeChgTrad.hs  TypeFV.hs  TypeFVSet.hs  TypeLam.hs
