cabal-version:		2.4
name:				Haskell-Rules
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.7.0.0
synopsis:           Haskell Rules is a domain-specific embedded language that allows semantic rules to be expressed as Haskell functions.
-- description:
homepage:           https://web.engr.oregonstate.edu/~erwig/HaskellRules/
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Steve Kollmansberger and Martin Erwig (maintained by listofoptions with permission, do not email main contributors!)
maintainer:         listofoptions@gmail.com
-- copyright:
category:           Control
extra-source-files: README, CHANGELOG.md

library
    exposed-modules:    NDSM, TypeGU, TypeGT
    other-modules:      Examples.TypeChg,
                        Examples.TypeChgMin,
                        Examples.TypeChgPlus,
                        Examples.TypeChgTrad,
                        Examples.TypeFV,
                        Examples.TypeFVSet,
                        Examples.TypeLam
    other-extensions:   DeriveDataTypeable,
                        MultiParamTypeClasses,
                        FunctionalDependencies
    build-depends:      base ^>=4.14.0.0,
                        syb ^>= 0.7.1
    hs-source-dirs:     lib, src
    default-language:   Haskell2010

test-suite Haskell-Rules-test
    default-language:   Haskell2010
    -- The interface type and version of the test suite.
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            MyLibTest.hs
    build-depends:      base ^>=4.14.0.0,
						syb ^>= 0.7.1

